--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,8 @@ dependencies:
   path:
   month_picker_dialog: ^2.11.1
   http:
-  
+  excel: ^4.0.3
+  path_provider: ^2.1.3
   # dart_finance: ^1.0.0
 
 dev_dependencies:
