--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   excel: ^4.0.3
   path_provider: ^2.1.3
   # dart_finance: ^1.0.0
+  flutter_bloc: ^8.1.5
 
 dev_dependencies:
   flutter_test:
